Master4429 Mod Files/MinecraftForgeGradle/.gradle/gradle.log
This mapping 'snapshot_20171003' was designed for MC 1.12! Use at your own peril.This mapping 'snapshot_20171003' was designed for MC 1.12! Use at your own peril.

#################################################
         ForgeGradle 2.3-SNAPSHOT-27b9d44        
  https://github.com/MinecraftForge/ForgeGradle  
#################################################
                 Powered by MCP                  
             http://modcoderpack.com             
     by: Searge, ProfMobius, R4wk, ZeuX          
     Fesh0r, IngisKahn, bspkrs, LexManos         
#################################################
:deobfCompileDummyTask
:deobfProvidedDummyTask
:sourceApiJava UP-TO-DATE
:compileApiJava UP-TO-DATE
:processApiResources UP-TO-DATE
:apiClasses UP-TO-DATE
:sourceMainJava
:compileJavaC:\Users\Administrator\Documents\GitHub\MythoCraft\Master4429 Mod Files\MinecraftForgeGradle\build\sources\main\java\com\hassam\mythocraft\init\BlockInit.java:29: error: illegal character: '`'
	`}
	^
C:\Users\Administrator\Documents\GitHub\MythoCraft\Master4429 Mod Files\MinecraftForgeGradle\build\sources\main\java\com\hassam\mythocraft\init\BlockInit.java:59: error: ')' expected
				new ModelResourceLocation(Reference.MOD_ID + ":" + item.getUnlocalizedName()substrin(5), "inventory"));
				                                                                            ^
C:\Users\Administrator\Documents\GitHub\MythoCraft\Master4429 Mod Files\MinecraftForgeGradle\build\sources\main\java\com\hassam\mythocraft\init\BlockInit.java:59: error: ';' expected
				new ModelResourceLocation(Reference.MOD_ID + ":" + item.getUnlocalizedName()substrin(5), "inventory"));
				                                                                                    ^
C:\Users\Administrator\Documents\GitHub\MythoCraft\Master4429 Mod Files\MinecraftForgeGradle\build\sources\main\java\com\hassam\mythocraft\init\BlockInit.java:59: error: not a statement
				new ModelResourceLocation(Reference.MOD_ID + ":" + item.getUnlocalizedName()substrin(5), "inventory"));
				                                                                                     ^
C:\Users\Administrator\Documents\GitHub\MythoCraft\Master4429 Mod Files\MinecraftForgeGradle\build\sources\main\java\com\hassam\mythocraft\init\BlockInit.java:59: error: ';' expected
				new ModelResourceLocation(Reference.MOD_ID + ":" + item.getUnlocalizedName()substrin(5), "inventory"));
				                                                                                      ^
C:\Users\Administrator\Documents\GitHub\MythoCraft\Master4429 Mod Files\MinecraftForgeGradle\build\sources\main\java\com\hassam\mythocraft\objects\blocks\BlockBase.java:4: error: illegal start of type
	public static  {
	               ^
C:\Users\Administrator\Documents\GitHub\MythoCraft\Master4429 Mod Files\MinecraftForgeGradle\build\sources\main\java\com\hassam\mythocraft\objects\blocks\BlockBase.java:4: error: ';' expected
	public static  {
	                ^
7 errors
 FAILED

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output.

BUILD FAILED

Total time: 11.582 secs
